fix: Fix API's output for importing server in server administration service
